--- a/src/main/webapp/index.page
+++ b/src/main/webapp/index.page
@@ -1,5 +1,5 @@
 ---
-title: Karaf 3.0.3
+title: Karaf 4.0.0 
 page_version: 22
 page_creator: gnodet
 page_modifier: jbonofre
@@ -15,11 +15,11 @@ Here is a short list of features supported by the Karaf:
 {column}
 {column}
 {center}
-*[Download Karaf 4.0.0.M3|index/community/download.html#Karaf4.0.0.M3]*
+*[Download Karaf 4.0.0|index/community/download.html#Karaf4.0.0]*
 *[Download Karaf 3.0.3|index/community/download.html#Karaf3.0.3]*
 *[Download Karaf 2.4.2|index/community/download.html#Karaf2.4.2]*
 *[Download Karaf 2.3.11|index/community/download.html#Karaf2.3.11]*
-[!/images/karaf-box.png|width=256!|index/community/download.html#Karaf3.0.3]
+[!/images/karaf-box.png|width=256!|index/community/download.html#Karaf4.0.0]
 {center}
 {html}
 <script src="http://widgets.twimg.com/j/2/widget.js"></script>
@@ -62,6 +62,7 @@ new TWTR.Widget({
 
 
 h2. News
+{include:news-2015-06-26}
 {include:news-2015-06-08}
 {include:news-2015-05-12}
 {include:news-2015-04-25}
@@ -73,4 +74,3 @@ h2. News
 {include:news-2015-01-23}
 {include:news-2015-01-02}
 {include:news-2014-11-17}
-{include:news-2014-11-09}
