--- a/src/main/webapp/index/community/download/archives.page
+++ b/src/main/webapp/index/community/download/archives.page
@@ -8,6 +8,27 @@ h1. Releases history
 
 {toc:minLevel=2|maxLevel=2}
 
+h2. Karaf 4.0.0.M3
+
+[Release Notes|download/karaf-4.0.0.M3-release.html]
+
+h3. Binary Distribution
+
+||Description||Download Link|| || || ||
+|Windows Distribution| [apache-karaf-4.0.0.M3.zip|ht3tp://archive.apache.org/dist/karaf/4.0.0.M3/apache-karaf-4.0.0.M3.zip]|[PGP|http://archive.apache.org/dist/karaf/4.0.0.M3/apache-karaf-4.0.0.M3.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/4.0.0.M3/apache-karaf-4.0.0.M3.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/4.0.0.M3/apache-karaf-4.0.0.M3.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-4.0.0.M3.tar.gz|http://archive.apache.org/dist/karaf/4.0.0.M3/apache-karaf-4.0.0.M3.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/4.0.0.M3/apache-karaf-4.0.0.M3.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/4.0.0.M3/apache-karaf-4.0.0.M3.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/4.0.0.M3-apache-karaf-4.0.0.M3.tar.gz.md5]|
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-4.0.0.M3-src.zip|http://archive.apache.org/dist.cgi/karaf/4.0.0.M3/apache-karaf-4.0.0.M3-src.zip]|[PGP|http://archive.apache.org/dist/karaf/4.0.0.M3/apache-karaf-4.0.0.M3-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/4.0.0.M3/apache-karaf-4.0.0.M3-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/4.0.0.M3/apache-karaf-4.0.0.M3-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-4.0.0.M3-src.tar.gz|http://archive.apache.org/dist/closer.cgi/karaf/4.0.0.M3/apache-karaf-4.0.0.M3-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/4.0.0.M3/apache-karaf-4.0.0.M3-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/4.0.0.M3/apache-karaf-4.0.0.M3-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/4.0.0.M3/apache-karaf-4.0.0.M3-src.tar.gz.md5]|
+
+h3. Manual
+||Description||Download Link||
+|HTML Manual| [manual-4.0.0.M3.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/4.0.0.M3/manual-4.0.0.M3.html] |
+|PDF Manual| [manual-4.0.0.M3.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/4.0.0.M3/manual-4.0.0.M3.pdf] |
+
 h2. Karaf 4.0.0.M2
 
 [Release Notes|download/karaf-4.0.0.M2-release.html]
