--- a/src/main/webapp/index/community/download/archives.page
+++ b/src/main/webapp/index/community/download/archives.page
@@ -71,6 +71,26 @@ h3. Manual
 |HTML Manual| [manual-4.0.0.M1.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/4.0.0.M1/manual-4.0.0.M1.html] |
 |PDF Manual| [manual-4.0.0.M1.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/4.0.0.M1/manual-4.0.0.M1.pdf] |
 
+h2. Karaf 3.0.3
+
+[Release Notes|download/karaf-3.0.3-release.html]
+
+h3. Binary Distribution
+
+||Description||Download Link|| || || ||
+|Windows Distribution| [apache-karaf-3.0.3.zip|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3.zip]|[PGP|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-3.0.3.tar.gz|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.1.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/3.0.3-apache-karaf-3.0.3.tar.gz.md5]|
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-3.0.3-src.zip|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3-src.zip]|[PGP|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-3.0.3-src.tar.gz|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/3.0.3/apache-karaf-3.0.3-src.tar.gz.md5]|
+
+h3. Manual
+||Description||Download Link||
+|HTML Manual| [manual-3.0.3.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.3/manual-3.0.3.html] |
+|PDF Manual| [manual-3.0.3.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.3/manual-3.0.3.pdf] |
 
 h2. Karaf 3.0.2
 
