Add Cave 4.0.0 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1689982 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -5,6 +5,7 @@ page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2015-07-08}
 {include:news-2015-07-02}
 {include:news-2015-06-26}
 {include:news-2015-06-08}
