--- a/src/main/webapp/index/community/download/archives.page
+++ b/src/main/webapp/index/community/download/archives.page
@@ -177,6 +177,27 @@ h3. Manual
 |HTML Manual| [manual-3.0.0.RC1.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.0.RC1/manual-3.0.0.RC1.html] |
 |PDF Manual| [manual-3.0.0.RC1.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/3.0.0.RC1/manual-3.0.0.RC1.pdf] |
 
+h2. Karaf 2.4.2
+
+[Release Notes|download/karaf-2.4.2-release.html]
+
+h3. Binary Distribution
+
+||Description||Download Link|| || || ||
+|Windows Distribution| [apache-karaf-2.4.2.zip|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2.zip]|[PGP|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-2.4.2.tar.gz|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.4.2-apache-karaf-2.4.2.tar.gz.md5]|
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-2.4.2-src.zip|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2-src.zip]|[PGP|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2-src.zip.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2-src.zip.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.4.2-src.tar.gz|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2-src.tar.gz]|[PGP|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2-src.tar.gz.asc]|[SHA1|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2-src.tar.gz.sha1]|[MD5|http://archive.apache.org/dist/karaf/2.4.2/apache-karaf-2.4.2-src.tar.gz.md5]|
+
+h3. Manual
+||Description||Download Link||
+|HTML Manual| [manual-2.4.2.html|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.4.2/manual-2.4.2.html] |
+|PDF Manual| [manual-2.4.2.pdf|http://repo1.maven.org/maven2/org/apache/karaf/manual/2.4.2/manual-2.4.2.pdf] |
+
 
 h2. Karaf 2.4.1
 
