Update commercial page
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1692240 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/commercial.page
+++ b/src/main/webapp/index/community/commercial.page
@@ -8,9 +8,9 @@ h2. Commercial Karaf Offerings
 
 Apache Karaf is a widely used project. As such, several companies have built products and services around Karaf. This page is dedicated to providing descriptions of those offerings and links to more information. Companies are definitely encouraged to update this page directly or send a mail to the Karaf PMC with a description of your offerings and we can update the page. The products and services listed on this page are provided for information use only to our users. The Karaf PMC does not endorse or recommend any of the products or services on this page. See below for information about what is appropriate to add to the page.
 
-h3. Inovex
+h3. Codecentric
 
-[Inovex|http://inovex.de] provides consulting and training for Apache Karaf and related technologies e.g. Apache Camel, Apache ActiveMQ and CXF for the DACH region.
+[Codecentric|http://codecentric.de] provides consulting and training for Apache Karaf and related technologies e.g. Apache Camel, Apache ActiveMQ and CXF for the DACH region.
 
 h3. Savoir Technologies, Inc
 
