Update team page
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1692241 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/team.page
+++ b/src/main/webapp/index/community/team.page
@@ -21,7 +21,7 @@ h3. Committers
 | David Jencks | djencks | !/images/check.gif! | [IBM|http://www.ibm.com] |
 | Alex Karasulu | akarasulu | !/images/check.gif! | |
 | [Charles Moulliard|http://cmoulliard.blogspot.com] | cmoulliard | !/images/check.gif! | [FuseSource|http://fusesource.com/] |
-| [Achim Nierbeck|http://notizblog.nierbeck.de] | anierbeck |!/images/check.gif! | [Inovex|http://inovex.de] |
+| [Achim Nierbeck|http://notizblog.nierbeck.de] | anierbeck |!/images/check.gif! | [Codecentric|http://codecentric.de] |
 | [Guillaume Nodet|http://gnodet.blogspot.com] | gnodet | !/images/check.gif! | [FuseSource|http://fusesource.com/] |
 | [Jean-Baptiste Onofré|http://blog.nanthrax.net] | jbonofre | !/images/check.gif! | [Talend|http://www.talend.com] |
 | Andreas Pieber| pieber | !/images/check.gif! | |
