Add decanter 1.0.0 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1693789 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -1,10 +1,11 @@
 ---
 title: News
-page_version: 14
+page_version: 15
 page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2015-08-01}
 {include:news-2015-07-12}
 {include:news-2015-07-08}
 {include:news-2015-07-02}
