Apache Karaf 4.0.1 release website updates
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1696575 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/news.page
+++ b/src/main/webapp/index/community/news.page
@@ -5,6 +5,7 @@ page_creator: gnodet
 page_modifier: jbonofre
 --- pipeline:conf
 h2. News
+{include:news-2015-08-19}
 {include:news-2015-08-01}
 {include:news-2015-07-12}
 {include:news-2015-07-08}
