--- a/src/main/webapp/index/subprojects/cellar/download/archives.page
+++ b/src/main/webapp/index/subprojects/cellar/download/archives.page
@@ -24,8 +24,8 @@ karaf@root> features:install cellar
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-cellar-2.2.4-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.zip]|[PGP|http://www.apache.org/dist/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cellar-2.2.4-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-cellar-2.2.4-src.zip|http://www.apache.org/dyn/closer.lua/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.zip]|[PGP|http://www.apache.org/dist/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cellar-2.2.4-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.2.4/apache-karaf-cellar-2.2.4-src.tar.gz.md5]|
 
 h2. Karaf Cellar 2.2.3
 
@@ -43,8 +43,8 @@ karaf@root> features:install cellar
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-cellar-2.2.3-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.zip]|[PGP|http://www.apache.org/dist/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cellar-2.2.3-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-cellar-2.2.3-src.zip|http://www.apache.org/dyn/closer.lua/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.zip]|[PGP|http://www.apache.org/dist/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cellar-2.2.3-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.2.3/apache-karaf-cellar-2.2.3-src.tar.gz.md5]|
 
 h2. Karaf Cellar 2.2.2
 
@@ -62,6 +62,6 @@ karaf@root> features:install cellar
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-cellar-2.2.2-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.zip]|[PGP|http://www.apache.org/dist/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cellar-2.2.2-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-cellar-2.2.2-src.zip|http://www.apache.org/dyn/closer.lua/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.zip]|[PGP|http://www.apache.org/dist/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cellar-2.2.2-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/2.2.2/apache-karaf-cellar-2.2.2-src.tar.gz.md5]|
 
