--- a/src/main/webapp/index/community/download.page
+++ b/src/main/webapp/index/community/download.page
@@ -46,14 +46,14 @@ h2. Karaf 4.0.1
 h3. Binary Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Distribution| [apache-karaf-4.0.1.zip|http://www.apache.org/dyn/closer.cgi/karaf/4.0.1/apache-karaf-4.0.1.zip]|[PGP|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-4.0.1.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/4.0.1/apache-karaf-4.0.1.tar.gz]|[PGP|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/4.0.1-apache-karaf-4.0.1.tar.gz.md5]|
+|Windows Distribution| [apache-karaf-4.0.1.zip|http://www.apache.org/dyn/closer.lua/karaf/4.0.1/apache-karaf-4.0.1.zip]|[PGP|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-4.0.1.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/4.0.1/apache-karaf-4.0.1.tar.gz]|[PGP|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/4.0.1-apache-karaf-4.0.1.tar.gz.md5]|
 
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-4.0.1-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/4.0.1/apache-karaf-4.0.1-src.zip]|[PGP|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-4.0.1-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/4.0.1/apache-karaf-4.0.1-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-4.0.1-src.zip|http://www.apache.org/dyn/closer.lua/karaf/4.0.1/apache-karaf-4.0.1-src.zip]|[PGP|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-4.0.1-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/4.0.1/apache-karaf-4.0.1-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/4.0.1/apache-karaf-4.0.1-src.tar.gz.md5]|
 
 h3. Manual
 ||Description||Download Link||
@@ -67,14 +67,14 @@ h2. Karaf 3.0.4
 h3. Binary Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Distribution| [apache-karaf-3.0.4.zip|http://www.apache.org/dyn/closer.cgi/karaf/3.0.4/apache-karaf-3.0.4.zip]|[PGP|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-3.0.4.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/3.0.4/apache-karaf-3.0.4.tar.gz]|[PGP|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.4-apache-karaf-3.0.4.tar.gz.md5]|
+|Windows Distribution| [apache-karaf-3.0.4.zip|http://www.apache.org/dyn/closer.lua/karaf/3.0.4/apache-karaf-3.0.4.zip]|[PGP|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-3.0.4.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/3.0.4/apache-karaf-3.0.4.tar.gz]|[PGP|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.4-apache-karaf-3.0.4.tar.gz.md5]|
 
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-3.0.4-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/3.0.4/apache-karaf-3.0.4-src.zip]|[PGP|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-3.0.4-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-3.0.4-src.zip|http://www.apache.org/dyn/closer.lua/karaf/3.0.4/apache-karaf-3.0.4-src.zip]|[PGP|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-3.0.4-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/3.0.4/apache-karaf-3.0.4-src.tar.gz.md5]|
 
 h3. Manual
 ||Description||Download Link||
@@ -88,14 +88,14 @@ h2. Karaf 2.4.3
 h3. Binary Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Distribution| [apache-karaf-2.4.3.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.4.3/apache-karaf-2.4.3.zip]|[PGP|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-2.4.3.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.4.3/apache-karaf-2.4.3.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3.tar.gz.md5]|
+|Windows Distribution| [apache-karaf-2.4.3.zip|http://www.apache.org/dyn/closer.lua/karaf/2.4.3/apache-karaf-2.4.3.zip]|[PGP|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-2.4.3.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/2.4.3/apache-karaf-2.4.3.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3.tar.gz.md5]|
 
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-2.4.3-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.4.3/apache-karaf-2.4.3-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.4.3-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.4.3/apache-karaf-2.4.3-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.32-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-2.4.3-src.zip|http://www.apache.org/dyn/closer.lua/karaf/2.4.3/apache-karaf-2.4.3-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.4.3-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/2.4.3/apache-karaf-2.4.3-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.32-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.4.3/apache-karaf-2.4.3-src.tar.gz.md5]|
 
 h3. Manual
 ||Description||Download Link||
@@ -109,14 +109,14 @@ h2. Karaf 2.3.11
 h3. Binary Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Distribution| [apache-karaf-2.3.11.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.3.11/apache-karaf-2.3.11.zip]|[PGP|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-2.3.11.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.3.11/apache-karaf-2.3.11.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.3.11-apache-karaf-2.3.11.tar.gz.md5]|
+|Windows Distribution| [apache-karaf-2.3.11.zip|http://www.apache.org/dyn/closer.lua/karaf/2.3.11/apache-karaf-2.3.11.zip]|[PGP|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-2.3.11.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/2.3.11/apache-karaf-2.3.11.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.3.11-apache-karaf-2.3.11.tar.gz.md5]|
 
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-2.3.11-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.3.11/apache-karaf-2.3.11-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.3.11-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.3.11/apache-karaf-2.3.11-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-2.3.11-src.zip|http://www.apache.org/dyn/closer.lua/karaf/2.3.11/apache-karaf-2.3.11-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.3.11-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/2.3.11/apache-karaf-2.3.11-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.3.11/apache-karaf-2.3.11-src.tar.gz.md5]|
 
 h3. Manual
 ||Description||Download Link||
@@ -130,15 +130,15 @@ h2. Karaf 2.2.11
 h3. Binary Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Distribution| [apache-karaf-2.2.11.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.2.11/apache-karaf-2.2.11.zip]|[PGP|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11.zip.md5]|
-|Unix/Linux/Cygwin Distribution| [apache-karaf-2.2.11.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.2.11/apache-karaf-2.2.11.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.11-apache-karaf-2.2.11.tar.gz.md5]|
+|Windows Distribution| [apache-karaf-2.2.11.zip|http://www.apache.org/dyn/closer.lua/karaf/2.2.11/apache-karaf-2.2.11.zip]|[PGP|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11.zip.md5]|
+|Unix/Linux/Cygwin Distribution| [apache-karaf-2.2.11.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/2.2.11/apache-karaf-2.2.11.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.11-apache-karaf-2.2.11.tar.gz.md5]|
 
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-2.2.11-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/2.2.11/apache-karaf-2.2.11-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11-src.zip.md5]|
+|Windows Source Distribution| [apache-karaf-2.2.11-src.zip|http://www.apache.org/dyn/closer.lua/karaf/2.2.11/apache-karaf-2.2.11-src.zip]|[PGP|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11-src.zip.md5]|
 
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.2.11-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/2.2.11/apache-karaf-2.2.11-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11-src.tar.gz.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-2.2.11-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/2.2.11/apache-karaf-2.2.11-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/2.2.11/apache-karaf-2.2.11-src.tar.gz.md5]|
 
 h3. Manual
 ||Description||Download Link||
