--- a/src/main/webapp/index/subprojects/cave/cave-download.page
+++ b/src/main/webapp/index/subprojects/cave/cave-download.page
@@ -36,8 +36,8 @@ You're ready to use Karaf Cave.
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-cave-4.0.0-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cave-4.0.0-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-cave-4.0.0-src.zip|http://www.apache.org/dyn/closer.lua/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cave-4.0.0-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cave/4.0.0/apache-karaf-cave-4.0.0-src.tar.gz.md5]|
 
 h2. Karaf Cave 3.0.0
 
@@ -57,8 +57,8 @@ You're ready to use Karaf Cave.
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-cave-3.0.0-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cave-3.0.0-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-cave-3.0.0-src.zip|http://www.apache.org/dyn/closer.lua/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cave-3.0.0-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cave/3.0.0/apache-karaf-cave-3.0.0-src.tar.gz.md5]|
 
 h2. Karaf Cave 2.3.0
 
@@ -78,8 +78,8 @@ You're ready to use Karaf Cave.
 h3. Source Distribution
 
 ||Description||Download Link|| || || ||
-|Windows Source Distribution| [apache-karaf-cave-2.3.0-src.zip|http://www.apache.org/dyn/closer.cgi/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.zip.md5]|
-|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cave-2.3.0-src.tar.gz|http://www.apache.org/dyn/closer.cgi/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.tar.gz.md5]|
+|Windows Source Distribution| [apache-karaf-cave-2.3.0-src.zip|http://www.apache.org/dyn/closer.lua/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cave-2.3.0-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cave/2.3.0/apache-karaf-cave-2.3.0-src.tar.gz.md5]|
 
 h2. Keys
 The {{KEYS}} used to sign the release can be found [here|http://www.apache.org/dist/karaf/KEYS].
