[KARAF-3986] Update scalate URL
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1702698 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/faq/how-do-i-edit-the-website.page
+++ b/src/main/webapp/index/community/faq/how-do-i-edit-the-website.page
@@ -15,7 +15,7 @@ The web site consists of three main resources:
 
 h3. Main site
 
-The main website sources are located in svn at [{{https://svn.apache.org/repos/asf/karaf/site/trunk}}].  This source tree is a maven project that uses [Scalate|http://scalate.fusesource.org] as a templating engine.
+The main website sources are located in svn at [https://svn.apache.org/repos/asf/karaf/site/trunk].  This source tree is a maven project that uses [Scalate|https://scalate.github.io/scalate] as a templating engine.
 The easiest way to make some modifications to it is to run the following command:
 {code}
 mvn jetty:run -Plive
