--- a/src/main/webapp/index/documentation.page
+++ b/src/main/webapp/index/documentation.page
@@ -12,7 +12,7 @@ h2. Karaf 4.0.x manual
 
 h2. Karaf 3.0.x manual
 
-* [Karaf 3.0.0 Manual|http://karaf.apache.org/manual/latest/index.html]
+* [Karaf 3.0.0 Manual|http://karaf.apache.org/manual/latest-3.0.x/index.html]
 
 h2. Karaf 2.4.x manual
 
