Add Cellar 4.0.0 article
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1704458 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -85,6 +85,7 @@ h2. Books
 
 h2. Apache Karaf Cellar
 
+* [What's new in Apache Karaf Cellar 4.0.0|http://blog.nanthrax.net/2015/09/whats-new-in-apache-karaf-cellar-4-0-0/]
 * [Apache Karaf Cellar 2.3.0|http://blog.nanthrax.net/2013/05/apache-karaf-cellar-2-3-0-released/]
 * [Apache Karaf Cellar 2.2.4|http://blog.nanthrax.net/2012/05/apache-karaf-cellar-2-2-4/]
 * [Apache Karaf Cellar and central management|http://blog.nanthrax.net/2012/02/apache-karaf-cellar-and-central-management/]
