Add Cellar 4.0.0 release
git-svn-id: https://svn.apache.org/repos/asf/karaf/site/trunk@1705800 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/site/navigation.page
+++ b/src/main/webapp/site/navigation.page
@@ -101,6 +101,7 @@ h3. [Subprojects]
 -- [Source|cellar-source]
 -- [Building|cellar-building]
 -- Documentation 
+--- [Cellar 4.x|http://karaf.apache.org/manual/cellar/latest-4/index.html]
 --- [Cellar 3.x|http://karaf.apache.org/manual/cellar/latest-3/index.html]
 --- [Cellar 2.x|http://karaf.apache.org/manual/cellar/latest-2/index.html]
 
