--- a/src/main/webapp/index/subprojects/cellar.page
+++ b/src/main/webapp/index/subprojects/cellar.page
@@ -1,6 +1,6 @@
 ---
 title: Cellar
-page_version: 10
+page_version: 11
 page_creator: jbonofre
 page_modifier: jbonofre
 --- pipeline:conf
@@ -24,17 +24,24 @@ h2. Quick Start
 
 To install and start Cellar into your running Karaf instance, you have to install the Cellar feature:
 
+If you use Karaf 4.x:
+
+{code}
+karaf@root()> feature:repo-add cellar 4.0.0
+karaf@root()> feature:install cellar
+{code}
+
 If you use Karaf 3.x:
 
 {code}
-karaf@root()> feature:repo-add mvn:org.apache.karaf.cellar/apache-karaf-cellar/3.0.2/xml/features
+karaf@root()> feature:repo-add cellar 3.0.3
 karaf@root()> feature:install cellar
 {code}
 
 If you use Karaf 2.x:
 
 {code}
-karaf@root()> features:addUrl mvn:org.apache.karaf.cellar/apache-karaf-cellar/2.3.5/xml/features
+karaf@root()> features:addUrl mvn:org.apache.karaf.cellar/apache-karaf-cellar/2.3.6/xml/features
 karaf@root()> features:install cellar
 {code}
 
