--- a/src/main/webapp/index/subprojects/cellar/cellar-download.page
+++ b/src/main/webapp/index/subprojects/cellar/cellar-download.page
@@ -19,10 +19,12 @@ h2. Latest Releases
 Grab these releases while they are hot!
 
 The latest release is:
+* for Karaf 4.x: [Karaf Cellar 4.0.0 Release|download/karaf-cellar-4.0.0-release.html].
 * for Karaf 3.x: [Karaf Cellar 3.0.3 Release|download/karaf-cellar-3.0.3-release.html].
 * for Karaf 2.x: [Karaf Cellar 2.3.6 Release|download/karaf-cellar-2.3.6-release.html].
 
 Releases:
+* [#Karaf Cellar 4.0.0]
 * [#Karaf Cellar 3.0.3]
 * [#Karaf Cellar 3.0.2]
 * [#Karaf Cellar 3.0.1]
@@ -49,6 +51,27 @@ h2. Getting the latest distributions
 {info:title=The URLs below use redirection}
 The above URLs use the Apache Mirror system to redirect you to a suitable mirror for your download. Some users have experienced issues with some versions of browsers (e.g. some Safari browsers). If the download doesn't seem to work for you from the above URL then try using [Mozilla Firefox|http://www.mozilla.com/en-US/firefox/]
 {info}
+
+h2. Karaf Cellar 4.0.0 (Karaf 4.0.x)
+
+[Release Notes|download/karaf-cellar-4.0.0-release.html]
+
+h3. Direct Installation
+
+Simply install the Karaf Cellar feature into your running Karaf 4.0.x instance:
+
+{code}
+karaf@root()> feature:repo-add cellar 4.0.0
+karaf@root()> feature:install cellar
+{code}
+
+You're ready to use Karaf Cellar clustering.
+
+h3. Source Distribution
+
+||Description||Download Link|| || || ||
+|Windows Source Distribution| [apache-karaf-cellar-4.0.0-src.zip|http://www.apache.org/dyn/closer.lua/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.zip]|[PGP|http://www.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.zip.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.zip.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.zip.md5]|
+|Unix/Linux/Cygwin Source Distribution| [apache-karaf-cellar-4.0.0-src.tar.gz|http://www.apache.org/dyn/closer.lua/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.tar.gz]|[PGP|http://www.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.tar.gz.asc]|[SHA1|http://www.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.tar.gz.sha1]|[MD5|http://www.apache.org/dist/karaf/cellar/4.0.0/apache-karaf-cellar-4.0.0-src.tar.gz.md5]|
 
 h2. Karaf Cellar 3.0.3 (Karaf 3.0.x)
 
