--- a/src/main/webapp/index/community/articles.page
+++ b/src/main/webapp/index/community/articles.page
@@ -66,6 +66,8 @@ h2. Tutorials
 * [Karaf Tutorial Part 6 - Database Access|http://www.liquid-reality.de/x/LYBk]
 * [Karaf Tutorial Part 7 - Camel JPA and JTA transactions|http://www.liquid-reality.de/x/JgBz]
 * [Karaf Tutorial Part 8 - Distributed OSGi|http://www.liquid-reality.de/x/D4C]
+* [Karaf Tutorial Part 9 - Annotation based blueprint and JPA|http://www.liquid-reality.de/x/C4DK]
+* [Karaf Tutorial Part 10 - Declarative Services|http://www.liquid-reality.de/x/BIDe]
 * [Combining Karaf Features, PAX URL, and Maven to deploy a plain JAR as an OSGi bundle|http://davidvaleri.wordpress.com/2010/08/13/combining-karaf-features-pax-url-and-maven-to-deploy-a-plain-jar-as-an-osgi-bundle/]
 * Blocking system.exit in OSGi on Karaf [part1|http://notizblog.nierbeck.de/2010/10/blocking-systemexit-in-osgi/] [part2|http://notizblog.nierbeck.de/2010/10/blocking-systemexit-in-osgi-part-ii/] [part3|http://notizblog.nierbeck.de/2010/10/blocking-systemexit-in-osgi-part-iii/] [part4|http://notizblog.nierbeck.de/2010/10/blocking-systemexit-in-osgi-part-iv/]
 * [Running aspects under OSGi 4.2 with Karaf.|http://dywicki.pl/2011/11/running-aspects-under-osgi-4-2-with-karaf/]
